maud/tests/warnings/keyword-without-at.stderr
error: found keyword `if`
       = help: should this be `@if`?
 --> tests/warnings/keyword-without-at.rs:5:9
  |
5 |         if {}
  |         ^^

error: found keyword `else`
       = help: should this be `@else`?
 --> tests/warnings/keyword-without-at.rs:6:9
  |
6 |         else {}
  |         ^^^^

error: found keyword `for`
       = help: should this be `@for`?
 --> tests/warnings/keyword-without-at.rs:7:9
  |
7 |         for {}
  |         ^^^

error: found keyword `while`
       = help: should this be `@while`?
 --> tests/warnings/keyword-without-at.rs:8:9
  |
8 |         while {}
  |         ^^^^^

error: found keyword `match`
       = help: should this be `@match`?
 --> tests/warnings/keyword-without-at.rs:9:9
  |
9 |         match {}
  |         ^^^^^
